# glass_engine

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: cmake-single-platform.yml
src/: config.hh  main.cc  main.cpp
src/config/: config.hh
src/engine/: Engine.cc  Engine.cpp  Engine.h  Engine.hh
src/platform/: Window.cc  Window.cpp  Window.h  Window.hh
src/rendering/: Camera.cpp  Camera.h  Mesh.cc  Mesh.cpp  Mesh.h  Mesh.hh  Renderer.cc  Renderer.cpp  Renderer.h  Renderer.hh  Shader.cc  Shader.cpp  Shader.h  Shader.hh
src/world/: GameObject.cpp  GameObject.h  SceneTree.cc  SceneTree.cpp  SceneTree.h  SceneTree.hh  Transform.cc  Transform.cpp  Transform.hh
src/world/nodes/: Node.cc  Node.cpp  Node.hh  Node3D.cc  Node3D.cpp  Node3D.h  Node3D.hh
src/world/objects/: Camera.cc  Camera.cpp  Camera.h  Camera.hh  MeshInstance.h  MeshInstance.hh
tests/: camera.spec.cc  engine.spec.cc  main.spec.cc  mesh.spec.cc  node.spec.cc  renderer.spec.cc  scene.spec.cc  window.spec.cc
tests/engine_tests/: engine_tests.cpp  test_main.cpp
tests/main_tests/: test_main.cpp
tests/platform_tests/: window_tests.cpp
tests/rendering_tests/: camera_tests.cpp  mesh_tests.cpp  renderer_tests.cpp
tests/world_tests/: gameobject_tests.cpp  node_tests.cpp  scene_tests.cpp
tests/world_tests/object_tests/: camera_tests.cpp
